OD-549 [FIX] Fix LFD detail view scrolling on Safari (#594)
* [FIX] fix thouch scroll

* [FIX] fix scroll to ios

--- a/css/layout-css/small-h-card-style.upload.css
+++ b/css/layout-css/small-h-card-style.upload.css
@@ -524,6 +524,7 @@
     bottom: 0;
     overflow: auto;
     padding: 40px 0;
+    z-index: 1;
   }
 
   .small-h-card-detail-overlay .small-h-card-detail-overlay-panel {
